fix image stretching by setting height

--- a/static/styles.css
+++ b/static/styles.css
@@ -274,19 +274,19 @@ h6 {
     .music-gallery .card {
         display: inline-block;
         max-width: 100% !important;
-        height: 18dvh !important;
+        height: 17dvh !important;
     }
 
     .music-gallery .card-body {
         width: 100% !important;
         padding-top: 0.2em !important;
+        max-height: 5dvh !important;
     }
 
     .music-gallery .card-body img {
-        max-width: 6% !important;
+        max-width: 15% !important;
         width: 100% !important;
         height: 100% !important;
-        object-fit: cover !important;
         display: block !important;
     }
 
